syntax = "proto3";

package microservice.api.v1.services;

import "api/v1/resources/empty.proto";
import "api/v1/resources/selflinks.proto";
import "api/v1/resources/product.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/sei-ri/microservice.io/api/v1/services;services";

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (microservice.api.v1.resources.Empty);
  rpc UpdateProduct (UpdateProductRequest) returns (microservice.api.v1.resources.Empty);
  rpc DeductProductQty (DeductProductQtyRequest) returns (google.protobuf.Empty);
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
}

message CreateProductRequest {
  google.protobuf.StringValue id = 1;
  string name = 2;
  string image_url = 3;
  int64 price = 4;
  int64 qty = 5;
}

message UpdateProductRequest {
  string id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue image_url = 3;
  google.protobuf.Int32Value price = 4;
  google.protobuf.Int32Value qty = 5;
}

message DeductProductQtyRequest {
  string id = 1;
  int64 qty = 2;
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  microservice.api.v1.resources.Product product = 1;
  microservice.api.v1.resources.SelfLinks links = 2;
}

message ListProductsRequest {
  int32 limit = 1;
	int32 offset = 2;
}

message ListProductsResponse {
  repeated GetProductResponse products = 1;
  microservice.api.v1.resources.SelfLinks links = 2;
}

